# apitofsim-web

./: Dockerfile  README.md  config_list_docker.json  pyproject.toml
example/: config.in
src/vms/: app.py  forms.py  utils.py
src/vms/templates/: analysis.html  base.html  instrument.html
src/vms/templates/analysis/: analysis.html  apitof.html  body.html  densityandr.html  queue.html  skimmer.html  tabs.html
src/vms/templates/settings/: _render_chain.html  _render_instrument.html  settings.html
src/vms/templates/ui/: _lightbox.html  _table_form.html  _tabs.html
vms/: app.py
vms/templates/: instrument.html
