[project]
name = "vms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "matplotlib>=3.10.6",
    "wtforms>=3.2.1",
]

[project.optional-dependencies]
deploy = [
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
